--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+iproute2 (4.9.0-1+deb9u1pexip1) pexip; urgency=medium
+
+  * Migrate to Stretch
+
+ -- John-Mark Bell <jmb@pexip.com>  Tue, 10 Jul 2018 00:19:52 +0000
+
 iproute2 (4.9.0-1+deb9u1) stretch; urgency=medium
 
   * Backport upstream commit 97a02cabef to fix segfault with iptables 1.6;
