--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+iproute2 (4.20.0-2pexip1) pexip; urgency=medium
+
+  * Migrate to Buster
+
+ -- Vincent Sanders <vince@pexip.com>  Mon, 09 Mar 2020 08:47:32 +0000
+
 iproute2 (4.20.0-2) unstable; urgency=medium
 
   * Upload to unstable.
