--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+iproute2 (5.10.0-4pexip1) pexip; urgency=medium
+
+  * Initial bullseye build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 02 Jun 2022 14:42:19 +0100
+
 iproute2 (5.10.0-4) unstable; urgency=medium
 
   * Backport 0012-iproute-force-rtm_dst_len-to-32-128.patch to fix ip
