--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+iproute2 (5.10.0-4pexip2) pexip-bullseye; urgency=medium
+
+  * Main bullseye build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Fri, 24 Jun 2022 13:55:34 +0100
+
 iproute2 (5.10.0-4pexip1) pexip; urgency=medium
 
   * Initial bullseye build
