--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+iproute2 (5.10.0-4pexip3) pexip-bullseye; urgency=medium
+
+  * Bullseye rebuild for ARM64 inclusion
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Mon, 05 Sep 2022 10:32:02 +0100
+
 iproute2 (5.10.0-4pexip2) pexip-bullseye; urgency=medium
 
   * Main bullseye build
