--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+iproute2 (6.1.0-3pexip1) pexip-bookworm; urgency=medium
+
+  * Initial bookworm build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 16 Nov 2023 10:04:14 +0000
+
 iproute2 (6.1.0-3) unstable; urgency=medium
 
   * Ensure 'ip mo' resolves to 'ip monitor' (Closes: #1036534)
