--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+iproute2 (6.1.0-3pexip2) pexip-bookworm; urgency=medium
+
+  * Bookworm build for product distribution
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Sat, 09 Dec 2023 22:52:48 +0000
+
 iproute2 (6.1.0-3pexip1) pexip-bookworm; urgency=medium
 
   * Initial bookworm build
