--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+iproute2 (6.1.0-3+pexip24u3) pexip-bookworm; urgency=medium
+
+  * New versioning scheme
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 01 Feb 2024 16:02:07 +0000
+
 iproute2 (6.1.0-3pexip2) pexip-bookworm; urgency=medium
 
   * Bookworm build for product distribution
